// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineCreate test initializes ok edit pipeline 1`] = `
<div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws container StyledProps---padding-small--3f0A"
  >
    <button
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws closeModal"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps---main--1Wws"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <h2
      class="StyledProps---font--2ipy StyledProps---font-h2--3Vpc StyledProps---main--1Wws heading"
      level="2"
    >
      Edit Pipeline
    </h2>
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws layout StyledProps---padding-xsmall---5eB"
    >
      <div>
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <form
            class="FormikForm---main--1N87"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="InputWithIdentifier---txtNameContainer--20iZ"
                >
                  <div
                    class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                  >
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="InputWithIdentifier---idInput--w8_T"
                      contenteditable="false"
                      disabled=""
                    >
                      test
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="name-0"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      Pipeline Name*
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          placeholder="Name"
                          type="text"
                          value="pipeline"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse---main--34Is"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-minus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                          icon="small-minus"
                        >
                          <svg
                            data-icon="small-minus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-minus
                            </desc>
                            <path
                              d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                        >
                          Description
                        </p>
                      </div>
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      />
                    </div>
                    <div
                      class="Collapse---collapse--2EmT"
                    >
                      <div
                        class="bp3-collapse collapse"
                        style="height: auto; overflow-y: visible; transition: none;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0); transition: none;"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="description-1"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <textarea
                                autocomplete="off"
                                class="bp3-input bp3-fill"
                                name="description"
                              >
                                desc
                              </textarea>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse---main--34Is"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-plus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                          icon="small-plus"
                        >
                          <svg
                            data-icon="small-plus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-plus
                            </desc>
                            <path
                              d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                        >
                          Tags
                        </p>
                      </div>
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      />
                    </div>
                    <div
                      class="Collapse---collapse--2EmT"
                    >
                      <div
                        class="bp3-collapse collapse"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(-undefinedpx);"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws startBtn StyledProps---intent-primary--2Xgi"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws Carousel---carousel--3dxG StyledProps---padding-small--3f0A"
      >
        <div
          class="Carousel---carouselView--pEe9"
        >
          <div
            class="Carousel---carouselItem--qOMj Carousel---active--2qbV"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---padding-bottom-small--2Hba"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel---carouselItem--qOMj Carousel---carouselItemNext--1WM6"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---padding-bottom-small--2Hba"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel---carouselItem--qOMj"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---padding-bottom-small--2Hba"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel---carouselRight--GJqy"
          >
            <div>
              <span
                class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
              >
                <svg
                  height="20"
                  viewBox="0 0 8 14"
                  width="20"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="Carousel---carouselIndicators--193j"
        >
          <span
            class="Carousel---indicator--3TpP Carousel---active--2qbV"
          />
          <span
            class="Carousel---indicator--3TpP"
          />
          <span
            class="Carousel---indicator--3TpP"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok new pipeline 1`] = `
<div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws container StyledProps---padding-small--3f0A"
  >
    <h2
      class="StyledProps---font--2ipy StyledProps---font-h2--3Vpc StyledProps---main--1Wws heading"
      level="2"
    >
      Welcome to the Pipeline Studio
    </h2>
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws layout StyledProps---padding-xsmall---5eB"
    >
      <div>
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws helpText"
        >
          Let’s get you started by giving your pipeline a name
        </p>
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <form
            class="FormikForm---main--1N87"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="InputWithIdentifier---txtNameContainer--20iZ"
                >
                  <div
                    class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                  >
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="InputWithIdentifier---idInput--w8_T"
                      contenteditable="true"
                    />
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="name-0"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      Pipeline Name*
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          placeholder="Name"
                          type="text"
                          value="pipeline"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse---main--34Is"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-minus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                          icon="small-minus"
                        >
                          <svg
                            data-icon="small-minus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-minus
                            </desc>
                            <path
                              d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                        >
                          Description
                        </p>
                      </div>
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      />
                    </div>
                    <div
                      class="Collapse---collapse--2EmT"
                    >
                      <div
                        class="bp3-collapse collapse"
                        style="height: auto; overflow-y: visible; transition: none;"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(0); transition: none;"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="description-1"
                          >
                            <div
                              class="bp3-form-content"
                            >
                              <textarea
                                autocomplete="off"
                                class="bp3-input bp3-fill"
                                name="description"
                              >
                                desc
                              </textarea>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="collapseDiv"
                >
                  <div
                    class="Collapse---main--34Is"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---main--2ZKU Collapse---header--3aq4"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---leftSection--YiEo"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-plus StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
                          icon="small-plus"
                        >
                          <svg
                            data-icon="small-plus"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              small-plus
                            </desc>
                            <path
                              d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws CollapseHeader---title--2DAT"
                        >
                          Tags
                        </p>
                      </div>
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws"
                      />
                    </div>
                    <div
                      class="Collapse---collapse--2EmT"
                    >
                      <div
                        class="bp3-collapse collapse"
                      >
                        <div
                          aria-hidden="false"
                          class="bp3-collapse-body"
                          style="transform: translateY(-undefinedpx);"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws startBtn StyledProps---intent-primary--2Xgi"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Start
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws Carousel---carousel--3dxG StyledProps---padding-small--3f0A"
      >
        <div
          class="Carousel---carouselView--pEe9"
        >
          <div
            class="Carousel---carouselItem--qOMj Carousel---active--2qbV"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---padding-bottom-small--2Hba"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel---carouselItem--qOMj Carousel---carouselItemNext--1WM6"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---padding-bottom-small--2Hba"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel---carouselItem--qOMj"
          >
            <div
              class="helpImages"
            >
              <img
                src="test-file-stub"
              />
              <div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ StyledProps---padding-bottom-small--2Hba"
                >
                  Pipeline Concepts
                </p>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                >
                  A pipeline allows you to automate your continuous deployment processes that includes deployment, testing, provisioning, approvals, verifications and rollout
                </p>
              </div>
            </div>
          </div>
          <div
            class="Carousel---carouselRight--GJqy"
          >
            <div>
              <span
                class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
              >
                <svg
                  height="20"
                  viewBox="0 0 8 14"
                  width="20"
                >
                  <path
                    d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="Carousel---carouselIndicators--193j"
        >
          <span
            class="Carousel---indicator--3TpP Carousel---active--2qbV"
          />
          <span
            class="Carousel---indicator--3TpP"
          />
          <span
            class="Carousel---indicator--3TpP"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
